--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
           ctx.fillRect(0, 0, grid.w * gridSize, grid.h * gridSize);
           
           //Grid
-          ctx.fillStyle = "#000000";
+          /*ctx.fillStyle = "#000000";
           for(var x = 0; x <= grid.w; x++) {
             ctx.moveTo(x * gridSize, 0);
             ctx.lineTo(x * gridSize, grid.h * gridSize);
@@ -123,7 +123,7 @@
             ctx.moveTo(0, y * gridSize);
             ctx.lineTo(grid.w * gridSize, y * gridSize);
             ctx.stroke();
-          }
+          }*/
 
           //Cells
           ctx.font = "15px Comic Sans MS";
